--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,4 +1,8 @@
 {
-  "rootDirectory": "web"
+  "projectId": "your-vercel-project-id",
+  "orgId": "your-org-id",
+  "settings": {
+    "framework": "nextjs",
+    "rootDirectory": "web"
+  }
 }
- 
